<resources>
    <string name="home_tab_today">Today</string>
    <string name="home_tab_week">Week</string>
    <string name="home_tab_month">Month</string>
    <string name="home_tab_todo">To Do</string>
    <string name="today_date">Today</string>
    <string name="tomorrow_date">Tomorrow</string>
    <string name="from_date">From %s</string>
    <string name="add_task_dialog_title_hint">Add task</string>
    <string name="due_to_date">Due to %s</string>
    <string name="snackbar_undo">Undo</string>
    <string name="snackbar_task_swiped">Moved to %s</string>
    <string name="archive">Archive</string>
    <string name="add_subtask_hint">Add subtask</string>
    <string name="task_details_toolbar_title">Edit Task</string>
    <string name="task_details_created">Created on %s</string>
    <string name="task_details_modified">Last modified on %s</string>
    <string name="task_details_note_hint">Add note</string>
    <string name="delete_task_dialog_title">Are you sure you want to delete this task?</string>
    <string name="cancel">Cancel</string>
    <string name="yes">Yes</string>
    <string name="due_date_popup_today">Today</string>
    <string name="due_date_popup_tomorrow">Tomorrow</string>
    <string name="due_date_popup_this_saturday">This Sunday</string>
    <string name="due_date_popup_next_saturday">Next Sunday</string>
    <string name="due_date_popup_pick_date">Pick date</string>
    <string name="settings_toolbar_title">Settings</string>
    <string name="settings_theme_title">Theme</string>
    <string name="settings_language_title">Language</string>
    <string name="settings_overdue_title">Overdue</string>
    <string name="settings_overdue_subtitle">%d overdue tasks</string>
    <string name="settings_archive_title">Archive</string>
    <string name="settings_archive_subtitle">%d archived tasks</string>
    <string name="settings_rate_title">Rate</string>
    <string name="settings_about_title">About</string>
    <string name="theme_name_pale_green">Pale green</string>
    <string name="theme_name_dark">Dark</string>
    <string name="delete">Delete</string>
    <string name="overdue_toolbar_title">Overdue</string>
    <string name="snackbar_task_deleted">Task deleted</string>
    <string name="snackbar_task_archived">Task archived</string>
    <string name="archive_toolbar_title">Archive</string>
    <string name="rate_dialog_title">Are you enjoying our app? Please give us a review</string>
    <string name="rate_dialog_positive">OK</string>
    <string name="rate_dialog_negative">Never</string>
    <string name="rate_dialog_neutral">Not now</string>
    <string name="about_title">About</string>
    <string name="about_version">Version %s</string>
    <string name="about_contact">Contact email app@example.com</string>
    <string name="about_privacy_policy">Privacy policy</string>
    <string name="clear_all">Clear All</string>
    <string name="archive_all">Archive All</string>
    <string name="snackbar_tasks_archived">Tasks archived</string>
    <string name="snackbar_tasks_deleted">Tasks deleted</string>
    <string name="text">Text</string>
    <string name="date_picker_dialog_title">Select a Date</string>
</resources>
